docs: refresh architecture and API documentation